# MyXodim_autotest

./: .env.example  .gitignore  AUTOTEST_PLAN_FOR_CODEX.md  Bugs.txt  BusinessHub_Sanity_Report3.xlsx  CLAUDE.md  NEW_DOCUMENTATION_RECON.md  POM_DIFF_2026-05-13.md  README.md  conftest.py  pyproject.toml  pytest.ini
config/: sanity_data.py  settings.py
data/: constants.py  i18n.py  phone_pool.py
docs/: SANITY_CHECKLIST.md  SANITY_CHECKLIST.txt
pages/: base_page.py
pages/admin/: admins_page.py  create_company_page.py  create_organization_modal.py  dashboard_page.py  login_page.py  organizations_page.py  tenants_page.py
pages/client/: app_page.py  banner.py  branches_page.py  categories_page.py  create_document_page.py  departments_page.py  document_type_groups_page.py  document_types_page.py  (+23 more)
plans/: EVENT_QUEUE_PLAN_FOR_CODEX.md  HR_CABINET_PLAN_FOR_CODEX.md  IMPORT_1C_PLAN_FOR_CODEX.md  POSITION_REFACTOR_PLAN_FOR_CODEX.md
scripts/: debug_no_inn.py  debug_uc41.py  debug_uc41_full.py  debug_uc41_list.py  periodic_recon.py  recon_admin_bugs_check.py  recon_admin_disable.py  recon_admin_extras.py  recon_admin_login_neg.py  recon_after_login.py  recon_branches.py  recon_bug002_check.py  recon_bug005_fix_check.py  recon_cat_br_edit_hover.py  recon_categories.py  recon_client_after_otp.py  recon_client_full.py  recon_client_sidebar.py  recon_company_and_mock1c.py  recon_company_create_full.py  recon_custom_route.py  recon_doc_full_submit.py  recon_doc_wizard.py  recon_doc_wizard_full.py  recon_doc_wizard_step3.py  recon_documents.py  recon_edit_delete.py  recon_inbox_real.py  recon_login.py  recon_member_create.py  recon_member_negative_edit.py  recon_mock1c_full.py  recon_otp_existing_new.py  recon_otp_step.py  recon_positions.py  recon_rbac_employee.py  recon_rbac_finansist.py  recon_role_edit_full.py  recon_roles.py  recon_route_editor.py  (+6 more)
utils/: auth_helpers.py  inn_generator.py
(+87 files in other folders)
