[project]
name = "myxodim-sanity"
version = "0.1.0"
description = "MyXodim daily sanity E2E suite (Playwright + pytest, UI-only)"
requires-python = ">=3.11"
dependencies = [
    "playwright>=1.49",
    "pytest>=8.3",
    "pytest-playwright>=0.6",
    "pytest-rerunfailures>=14.0",
    "pydantic-settings>=2.6",
    "allure-pytest>=2.13",
]

[dependency-groups]
dev = [
    "ruff>=0.8",
]

[tool.ruff]
line-length = 110
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
